<resources>
    <string name="BASIC_EN">BASIC</string>
    <string name="BASIC_DE">STANDART</string>
    <string name="BASIC2_EN">BASIC2</string>
    <string name="BASIC2_DE">STANDART2</string>
    <string name="TRIGO_EN">TRIGO</string>
    <string name="TRIGO_DE">TRIGO</string>
    <string name="STATS_EN">STATISTIC</string>
    <string name="STATS_DE">STATISTIK</string>
    <string name="HYPER_DE">HYPER</string>
    <string name="HYPER_EN">HYPER</string>
    <string name="LOGIC_EN">LOGIC</string>
    <string name="LOGIC_DE">LOGISCH</string>
    <string name="MEMORY_EN">MEMORY</string>
    <string name="MEMORY_DE">SPEICHER</string>
    <string name="USER_EN">USER</string>
    <string name="USER_DE">NUTZER</string>
    <string name="app_nameDE">Rechner</string>
    <string name="app_nameEN">Calculator</string>
    <string name="MUL">*</string>
    <string name="DIV">/</string>
    <string name="POT">^</string>
    <string name="ADD">+</string>
    <string name="SUB">-</string>
    <string name="CLEAR">⌫</string>
    <string name="CLEAR_ALL">⌧</string>
    <string name="BRACKET_OPEN">(</string>
    <string name="BRACKET_CLOSE">)</string>
    <string name="DECLOG">LOG</string>
    <string name="SQUR">√</string>
    <string name="COS">COS</string>
    <string name="TAN">TAN</string>
    <string name="e">e</string>
    <string name="PI">π</string>
    <string name="DEC">DEC</string>
    <string name="BIN">BIN</string>
    <string name="OCT">OCT</string>
    <string name="HEX">HEX</string>
    <string name="bruch">a/b</string>
    <string name="ROOT">√</string>
    <string name="ROOT3">\u00B3√</string>
    <string name="SUME">∑</string>
    <string name="MULP">∏</string>
    <string name="LEFTARROW">L</string>
    <string name="RIGHTARROW">R</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">e</string>
    <string name="F">F</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="x">D</string>
    <string name="x_h_one">x\u207B\u00B9</string>
    <string name="nPr">nPr</string>
    <string name="nCr">nCr</string>
    <string name="ANS">ANS</string>
    <string name="f">f</string>
    <string name="title_activity_rechner_trigo">RechnerTrigo</string>
    <string name="LN">LN</string>
    <string name="ZN">ZN(n)</string>
    <string name="ZB">ZB(x,y)</string>
    <string name="LB">LB</string>
    <string name="MENU_DE">Menü</string>
    <string name="MENU_EN">Menu</string>
    <string name="CONVEN">CONVERSION</string>
    <string name="CONVDE">KONVERTIERUNG</string>
    <string name="CONSTEN">CONSTANTS</string>
    <string name="CONSTDE">KONSTANTEN</string>
    <string name="VERLAUFEN">HISTORY</string>
    <string name="VERLAUFDE">VERLAUF</string>
    <string name="settingsEN">Settings</string>
    <string name="settingsDE">Einstellungen</string>
    <string name="taschenrechnerModusDE">Modus: Rech</string>
    <string name="taschenrechnerModusEN">Mode: Calc</string>
    <string name="ConvColorEN">Colorscheme of Conversions</string>
    <string name="ConvColorDE">Farbe in Konvertierung</string>
    <string name="ConstColorEN">Colorscheme of Constants</string>
    <string name="ConstColorDE">Farbe in Konstanten</string>
    <string name="HistColorEN">Colorscheme of History</string>
    <string name="HistColorDE">Color in Verlauf</string>
    <string name="umrechnungEN">Mode: Conversion</string>
    <string name="umrechnungDE">Modus: Umrechnung</string>
    <string name="ActColorEN">Color of the Act buttons</string>
    <string name="ActColorDE">Farbe der Act Buttons</string>
    <string name="FktColorEN">Color of the fkt buttons</string>
    <string name="FktColorDE">Farbe der fkt Buttons</string>
    <string name="FopsColorDE">Farbe der fops Buttons</string>
    <string name="FopsColorEN">Color of the fops buttons</string>
    <string name="NumbersColorEN">Color of the number buttons</string>
    <string name="NumbersColorDE">Farbe der Zahlenbuttons</string>
    <string name="SaveColorEN">Color of the save buttons</string>
    <string name="SaveColorDE">Farbe der save buttons</string>
    <string name="SpecialColorEN">Color of the special buttons</string>
    <string name="SpecialColorDE">Farbe der Spezialbuttons</string>
    <string name="DisplayColorEN">Color of the Display</string>
    <string name="DisplayColorDE">Farbe des Displays</string>
    <string name="DisplayTextColorEN">Color of Text in the Display</string>
    <string name="DisplayTextColorDE">Farbe des Text im Displays</string>
    <string name="BackgroundColorEN">Color of the Background</string>
    <string name="BackgroundColorDE">Farbe des Hintergrund</string>
    <string name="pref_summary_colors_defaultEN">Set the color settings back to default</string>
    <string name="pref_summary_colors_defaultDE">Farbeinstellungen auf Standart zurückstellen</string>
    <string name="pref_title_colors_defaultEN">Default colors</string>
    <string name="pref_title_colors_defaultDE">Standartfarben</string>
    <string name="title_activity_constants">CONSTANTS</string>
    <string name="app_name">CUSTOM CALC</string>
    <string name="pref_summary_colors_default">Farbe wählen</string>
    <string name="pref_title_colors_default">Farbe wählen</string>
    <string name="save_settings_EN">SAVE SETTINGS</string>
    <string name="save_settings_DE">speichern</string>
    <string name="number_prec_setting_titleDE">Stelle die Anzahl der Nachkommastellen für Ergebnise ein.</string>
    <string name="number_prec_setting_titleEN">Set the precision of results.</string>
    <string name="title_activity_backgroundimage_setting">BackgroundimageSettingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting_backgroundimage">SettingBackgroundimageActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_description_social_recommendations">soc recs</string>
    <string name="pref_title_social_recommendations">soc recs</string>
    <string name="pref_default_display_name">default name</string>
    <string name="pref_title_display_name">default name</string>
    <string name="pref_title_add_friends_to_messages">add friends to messge</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="pref_header_general">general</string>
    <string name="title_activity_test">TestAct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="deleteDesignEN">delete</string>
    <string name="saveDesignEN">save</string>
    <string name="renameDesignEN">rename</string>
    <string name="setDesignEN">set</string>
    <string name="setDesignDE">setzen</string>
    <string name="renameDesignDE">umbennen</string>
    <string name="deleteDesignDE">löschen</string>
    <string name="saveDesignDE">speichern</string>
    <string name="decimal_places_pref">1</string>
    <string-array name="act_EN">
        <item>Calculator</item>
        <item>Menu</item>
    </string-array>
    <string-array name="act_DE">
        <item>Taschenrechner</item>
        <item>Menü</item>
    </string-array>
    <string-array name="modes_EN">
        <item>BASIC</item>
        <item>BASIC2</item>
        <item>TRIGO</item>
        <item>HYPER</item>
        <item>LOGIC</item>
        <item>STATISTIC</item>
        <item>MEMORY</item>
        <item>USER</item>
    </string-array>
    <string-array name="modes_DE">
        <item>STANDART</item>
        <item>STANDART2</item>
        <item>TRIGO</item>
        <item>HYPER</item>
        <item>LOGISCH</item>
        <item>STATISTIK</item>
        <item>SPEICHER</item>
        <item>NUTZER</item>
    </string-array>
    <string-array name="languagesNames_EN">
        <item>english</item>
        <item>german</item>
    </string-array>
    <string-array name="languagesValue_EN">
        <item>english</item>
        <item>german</item>
    </string-array>
    <string-array name="languagesNames_DE">
        <item>englisch</item>
        <item>deutsch</item>
    </string-array>
    <string-array name="languagesValue_DE">
        <item>englisch</item>
        <item>deutsch</item>
    </string-array>
    <string-array name="mittelwert_de">
        <item>arithmetisches Mittel</item>
        <item>geometrisches Mittel</item>
        <item>harmonisches Mittel</item>
    </string-array>
    <string-array name="mittelwert_en">
        <item>arithmetic mean</item>
        <item>geometric mean</item>
        <item>harmonic mean</item>
    </string-array>
    <string-array name="mittelwert_val">
        <item>AriMit</item>
        <item>GeoMit</item>
        <item>HarMit</item>
    </string-array>
</resources>