<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.rarepebble.colorpicker.ColorPreference
        android:key="ActColor"
        android:title="@string/ActColorEN"
        android:defaultValue="#ffc60aff"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="FktColor"
        android:title="@string/FktColorEN"
        android:defaultValue="#FF9100"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="FopsColor"
        android:title="@string/FopsColorEN"
        android:defaultValue="#00E676"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="NumbersColor"
        android:title="@string/NumbersColorEN"
        android:defaultValue="#FFFFFF"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="SaveColor"
        android:title="@string/SaveColorEN"
        android:defaultValue="#AFAFAF"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="SpecialColor"
        android:title="@string/SpecialColorEN"
        android:defaultValue="#00B0FF"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="DisplayColor"
        android:title="@string/DisplayColorEN"
        android:defaultValue="#FFFFFF"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="DisplayTextColor"
        android:title="@string/DisplayTextColorEN"
        android:defaultValue="#000000"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="BackgroundColor"
        android:title="@string/BackgroundColorEN"
        android:defaultValue="#FFFFFF"
        />


    <Preference
        android:icon="@drawable/ic_image_black_24dp"
        android:title="Backgroundimage">
        <intent
            android:targetPackage="com.example.titancalculator"
            android:targetClass="com.example.titancalculator.SettingBackgroundimageActivity" />
    </Preference>
</PreferenceScreen>
