<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.rarepebble.colorpicker.ColorPreference
        android:key="ConvColor"
        android:title="@string/ConvColorDE"
        android:defaultValue="#ffc60aff"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="ConstColor"
        android:title="@string/ConstColorDE"
        android:defaultValue="#00B0FF"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="HistColor"
        android:title="@string/HistColorDE"
        android:defaultValue="#00E676"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="actcolor_default_switch"
        android:summary="@string/pref_summary_colors_default"
        android:title="@string/pref_title_colors_default" />
</PreferenceScreen>
